--- a/Ferramentas.html
+++ b/Ferramentas.html
@@ -14,15 +14,23 @@
     <title>Materiais</title>
 </head>
 <body>
-    <p>Prescisamos ter em mãos algumas coisas para fazer nosso arroz:
+    <p> <strong> Coisas que prescisamos ter em mãos para fazer nosso arroz: </strong><hr>
         <center><h1>Ferramentas:</h1></center>
-        <ul>
+        <ul> 
             <li>Colher grande;</li>
-            <li>Panela, tamanho de acordo com a quantia a ser feita;<br><img src="imagens/P_20210825_120916.jpg" 
-            alt="Imagem de panela e colher grande" width=285 height=180><br> </li>
+            <li>Panela, tamanho de acordo com a quantia a ser feita;</li>
             <li>Fogão a gaz ou a lenha.</li>
+                <center><img src="imagens/P_20210825_120916.jpg" 
+            alt="Imagem de panela e colher grande" width=285 height=180></center><hr>
+        </ul>
+        <center><h1>Ingredientes:</h1></center>
+    </p><ul>
+            <li>Arroz;</li><img src="imagens/P_20210825_120746.jpg" alt="Imagem de arroz" width=285 height=180>
+            <li>Óleo ou banha;</li><img src="imagens/P_20210825_120943.jpg" alt="Imagem de óleo" width=285 height=180>
+            <li>Sal;</li><img src="imagens/P_20210825_120821.jpg" alt="Imagem de sal" width=285 height=180>
+            <li>Água;</li><img src="imagens/P_20210825_120705.jpg" alt="Imagem de água" width=285 height=180>
     </ul>
-    </p>
-    
+    <p>Link para voltar para a tela inicial:</p>
+    <a href="index.html">Tela incicial com o modo de preaparo.</a>
 </body>
 </html>
