--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
 </head>
 <body> <!--width é a largura height é a altura--> 
     <center>
-    <img src="imagens/P_20210825_123811.jpg" alt="Imagem de arroz no prato" width=865 height=600>
-    <h1>Tutorial de como fazer arroz</h1><hr>
-    <p>Olá, seja bem vindo ao tutorial de como fazer arroz, que é essencial e muito presente na nossa alimentação, 
+        <h1>Tutorial de como fazer arroz</h1><hr>
+    <img src="imagens/P_20210825_123811.jpg" alt="Imagem de arroz no prato" width=865 height=600><hr>
+    <p>Olá, seja bem vindo a receita de como fazer arroz, que é um alimento essencial e muito presente na nossa alimentação, 
     rico em principalmente hidratos de carbono, fornecendo bastante energia para o ser, além de se encaixar muito 
     perfeitamente acompanhando outra coisa, como um feijão, grão-de-bico, lentilha, algum molho, etc.
     </p>
-    <p> Para começar a receita a gente tem que ter em mãos os seguintes itens, que estão no link:</p>
     </center>
+    <p> Para começar a receita a gente tem que ter em mãos os itens, que estão no link:</p>
     <a href="Ferramentas.html">Materiais</a>
-    
+    <p>Depois que estiver com os itens, está na hora de ir para o modo de preparo, que está no link:</p>
+    <a href="mododepreparo.html">Modo de preparo</a>
+    <p style="text-align: right;"><small>Desenvolvido por Beranrdo de Oliveira dos Santos Turma 413.</small></p>
 </body>
 </html>
