agora sim verçao final

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <a href="Ferramentas.html">Materiais</a>
     <p>Depois que estiver com os itens, está na hora de ir para o modo de preparo, que está no link:</p>
     <a href="mododepreparo.html">Modo de preparo</a>
-    <p style="text-align: right;"><small>Desenvolvido por Beranrdo de Oliveira dos Santos Turma 413.</small></p>
+    <p style="text-align: right;"><small>Desenvolvido por Beranrdo de Oliveira dos Santos Turma 413.
+
+        
+    </small></p>
 </body>
 </html>
