inicio alteraçoes css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Como fazer arroz</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bonheur+Royale&family=Gemunu+Libre&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/principal.css">
 </head>
 <body> <!--width é a largura height é a altura--> 
     <center>
@@ -16,12 +20,13 @@
     </p>
     </center>
     <p> Para começar a receita a gente tem que ter em mãos os itens, que estão no link:</p>
-    <a href="Ferramentas.html">Materiais</a>
+    <a href="materiais.html">Materiais</a>
     <p>Depois que estiver com os itens, está na hora de ir para o modo de preparo, que está no link:</p>
     <a href="mododepreparo.html">Modo de preparo</a>
-    <p style="text-align: right;"><small>Desenvolvido por Beranrdo de Oliveira dos Santos Turma 413.
+    <p style="text-align: right;"><small>Desenvolvido por Bernardo de Oliveira dos Santos Turma 413.
 
         
+
     </small></p>
 </body>
 </html>
