--- a/materiais.html
+++ b/materiais.html
@@ -12,6 +12,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Materiais</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bonheur+Royale&family=Gemunu+Libre&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/detalhe_ingrediente.css">
 </head>
 <body>
     <p> <strong> Coisas que prescisamos ter em mãos para fazer nosso arroz: </strong><hr>
@@ -24,9 +28,30 @@
             alt="Imagem de panela e colher grande" width=285 height=180></center><hr>
         </ul>
         <center><h1>Ingredientes:</h1></center>
-    </p><ul>
-            <li>Arroz;</li><img src="imagens/P_20210825_120746.jpg" alt="Imagem de arroz" width=285 height=180>
-            <li>Óleo ou banha;</li><img src="imagens/P_20210825_120943.jpg" alt="Imagem de óleo" width=285 height=180>
+    </p>
+    <table>
+        <thead>
+            <tr>
+                <th>Ingrediente</th><th>Detalhes</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr class="centralizado">
+                <td>Arroz</td><td><a href="detalhe_arroz.html">detalhe</a></td>
+            </tr>
+            <tr class="centralizado">
+                <td>Sal</td><td><a href="detalhe_sal.html">detalhe</a></td>
+            </tr>
+            <tr class="centralizado">
+                <td>oleo</td><td><a href="detalhe_oleo.html">detalhe</a></td>
+            </tr>
+            <tr class="centralizado">
+                <td>água</td>
+            </tr>
+        </tbody>
+        
+    </table>
+    <ul>
             <li>Sal;</li><img src="imagens/P_20210825_120821.jpg" alt="Imagem de sal" width=285 height=180>
             <li>Água;</li><img src="imagens/P_20210825_120705.jpg" alt="Imagem de água" width=285 height=180>
     </ul>
