--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <title>Como fazer arroz</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bonheur+Royale&family=Gemunu+Libre&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bonheur+Royale&family=Gemunu+Libre&family=Zilla+Slab:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/principal.css">
 </head>
 <body> <!--width é a largura height é a altura--> 
     <center>
         <h1>Tutorial de como fazer arroz</h1><hr>
-    <img src="imagens/P_20210825_123811.jpg" alt="Imagem de arroz no prato" width=865 height=600><hr>
+    <img src="imagens/prontoarroz.jpg" alt="Imagem de arroz no prato" width=865 height=600><hr>
     <p>Olá, seja bem vindo a receita de como fazer arroz, que é um alimento essencial e muito presente na nossa alimentação, 
     rico em principalmente hidratos de carbono, fornecendo bastante energia para o ser, além de se encaixar muito 
     perfeitamente acompanhando outra coisa, como um feijão, grão-de-bico, lentilha, algum molho, etc.
