--- a/materiais.html
+++ b/materiais.html
@@ -14,13 +14,13 @@
     <title>Materiais</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bonheur+Royale&family=Gemunu+Libre&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bonheur+Royale&family=Gemunu+Libre&family=Zilla+Slab:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/detalhe_ingrediente.css">
 </head>
 <body>
     <p> <strong> Coisas que prescisamos ter em mãos para fazer nosso arroz: </strong><hr>
         <center><h1>Ferramentas:</h1></center>
-        <ul> 
+        <ul style="color: aliceblue;"> 
             <li>Colher grande;</li>
             <li>Panela, tamanho de acordo com a quantia a ser feita;</li>
             <li>Fogão a gaz ou a lenha.</li>
