--- a/detalhe_oleo.html
+++ b/detalhe_oleo.html
@@ -7,7 +7,7 @@
     <title>Como fazer arroz</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bonheur+Royale&family=Gemunu+Libre&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bonheur+Royale&family=Gemunu+Libre&family=Zilla+Slab:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/detalhe_ingrediente.css">
 </head>
 <body>
@@ -23,28 +23,20 @@
         </thead>
         <tbody>
             <tr>
-                <td>Valor energético</td><td>172kcal=722kj</td><td>9</td>
+                <td>Valor energético</td><td>108 kcal = 454 kJ</td><td>5</td>
             </tr>
             <tr>
                 <td>Carboidratos</td><td>40g</td><td>13</td>
             </tr>
-            <tr>
-                <td>Proteínas</td><td>2,8g</td><td>4</td>
             </tr>
             <tr>
-                <td>Gorduras totais</td><td>0g</td><td>0</td>
+                <td>Gorduras totais</td><td>12g</td><td>22</td>
             </tr>
             <tr>
-                <td>VGorduras saturadas</td><td>0g</td><td>0</td>
+                <td>Gorduras saturadas</td><td>1,9g</td><td>9</td>
             </tr>
             <tr>
-                <td>Gorduras trans</td><td>0g</td><td>**</td>
-            </tr>
-            <tr>
-                <td>Fibra alimentar</td><td>0,8g</td><td>3</td>
-            </tr>
-            <tr>
-                <td>Sódio</td><td>0mg</td><td>0</td>
+                <td>Vitamina E</td><td>1,7mg</td><td>17</td>
             </tr>
         </tbody>
         
